<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE7E7"
    tools:ignore="MissingClass">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="0dp">

    </androidx.appcompat.widget.Toolbar>


    <FrameLayout
        android:id="@+id/createCharacterLayout"
        android:layout_width="395dp"
        android:layout_height="357dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/name"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/raceView"
        android:layout_width="100dp"
        android:layout_height="30dp"

        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/race"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/classView"
        app:layout_constraintStart_toEndOf="@+id/nameView"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/classView"
        android:layout_width="100dp"
        android:layout_height="30dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/classe"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/godView"
        android:layout_width="100dp"
        android:layout_height="30dp"

        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/god"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceView" />

    <Button
        android:id="@+id/buttonSkills"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skills"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/createCharacterLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/backgroundView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"

        android:gravity="center"
        android:text="@string/background"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <Button
        android:id="@+id/characteristicsButton"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/characteristics"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/createCharacterLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/finalButton"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:text="@string/finished"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:backgroundTint="#535050"
        app:layout_constraintBottom_toTopOf="@+id/createCharacterLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonDetails"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/details"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/characteristicsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundView" />


</androidx.constraintlayout.widget.ConstraintLayout>



