<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/classRadioGroup1"
        android:layout_width="115dp"
        android:layout_height="209dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/prevButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_Warrior"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Warrior" />

        <RadioButton
            android:id="@+id/radioButton_Thief"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Thief" />

        <RadioButton
            android:id="@+id/radioButton_Sorcerer"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Sorcerer" />

        <RadioButton
            android:id="@+id/radioButton_Illusionist"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Illusionist" />

        <RadioButton
            android:id="@+id/radioButton_Assassin"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Assassin" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/classRadioGroup2"
        android:layout_width="132dp"
        android:layout_height="213dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_Monk"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Monk" />

        <RadioButton
            android:id="@+id/radioButton_Ranger"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Ranger" />

        <RadioButton
            android:id="@+id/radioButton_Priest"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Priest" />

        <RadioButton
            android:id="@+id/radioButton_Druid"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Druid" />

        <RadioButton
            android:id="@+id/radioButton_Barbarian"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Barbarian" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/prevButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/leftwhite"
        android:text="@string/previousButton"
        android:textColor="#FFFFFF"
        app:backgroundTint="#BA0303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rightwhite"
        android:text="@string/nextButton"
        android:textColor="#FFFFFF"
        app:backgroundTint="#BA0303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/questionButton"
        android:textColor="#FFFFFF"
        app:backgroundTint="#BA0303"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="#FFFFFF"
        app:backgroundTint="#BA0303"
        android:layout_marginBottom="32dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/prevButton" />

    <TextView
        android:id="@+id/textViewClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/classe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>